[gd_scene load_steps=11 format=3 uid="uid://bmhiversgqh5w"]

[ext_resource type="Texture2D" uid="uid://p16s4dhmpo1" path="res://scenes/game_object/player/player.png" id="1_qmgeu"]
[ext_resource type="PackedScene" uid="uid://g0tsfdu7gtmo" path="res://scenes/component/health_component.tscn" id="2_rox83"]
[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="2_uwdsq"]
[ext_resource type="PackedScene" uid="uid://dj0ruddojwmj1" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_xuwbk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g83jb"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axetg"]
bg_color = Color(0.258824, 0.870588, 0.690196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_x7hip"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jcmgp"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jugwu"]
radius = 5.0

[sub_resource type="GDScript" id="GDScript_drh3c"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("2_uwdsq")

[node name="HealthComponent" parent="." instance=ExtResource("2_rox83")]

[node name="AbilityManager" type="Node" parent="."]

[node name="SwordAbilityController" parent="AbilityManager" instance=ExtResource("2_xuwbk")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_g83jb")
theme_override_styles/fill = SubResource("StyleBoxFlat_axetg")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_x7hip")

[node name="CollisionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_jcmgp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qmgeu")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_jugwu")
script = SubResource("GDScript_drh3c")
